--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 layout: home
 author_profile: true
 ---
+
+# Welcome to My Academic Profile
+
+## About Me
+Hello! I am Robert Wojciechowski, a PhD candidate in Economics at Universitat Pompeu Fabra. My research focuses on understanding economic dynamics and the impact of financial shocks on various sectors.
+
+## Research Interests
+I am particularly interested in topics related to growth-at-risk, heterogeneous marginal effects, and the estimation of structural models. I aim to contribute to the field through my ongoing projects and publications.
