--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 ---
 layout: home
 ---
+
+<h1>About Me</h1>
+<p>I am a PhD candidate in Economics at Universitat Pompeu Fabra. My thesis advisors are prof. Christian Brownlees and prof. Andrea Caggese. I will be on the 2025-2026 Econ Job Market.</p>
+
+<h2>Research Interests</h2>
+<p>My research lies at the intersection of econometrics and macroeconomics.</p>
