--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ author_profile: true
 <p>I am a PhD candidate in Economics at Universitat Pompeu Fabra. My thesis advisors are prof. Christian Brownlees and prof. Andrea Caggese. I will be on the 2025-2026 Econ Job Market.</p>
 
 <h2>Research Interests</h2>
-<p>My research lies at the intersection of econometrics and macroeconomics.</p>
+<p>My research lies at the intersection of econometrics and macroeconomics. I work on developing and applying causal econometrics tools to macroeconomics. I work a lot with quantile regressions, local projections, and difference-in-differences. I study broad a range of macroeconomic topics from growth-at-risk to firm dynamics. </p>
